--- a/src/components/Profile/Profile.module.scss
+++ b/src/components/Profile/Profile.module.scss
@@ -3,35 +3,56 @@
 .profile {
   .profile__poster {
     max-width: 100%;
+    height: 300px;
   }
 }
 
 .poster {
   max-width: 960px;
+  height: 300px;
 }
 
 .section {
   display: flex;
 
-  .section__avatar {
-    position: relative;
-    top: -100px;
-    margin-left: 70px;
+  .section__coll {
+  
+    &:first-child {
+      position: relative;
+      top: -100px;
+      margin-left: 70px;
+    }
+
+    &:nth-child(2) {
+      width: 200px;
+    }
   }
 
   .section__online {
     color: $icon-header;
     font-family: Roboto;
-    font-size: 21px;
+    font-size: 16px;
     font-weight: 400;
     line-height: 22px;
+    margin-top: 10px;
   }
 
   .section__name {
     color: #ffffff;
     font-family: Roboto;
-    font-size: 38px;
+    font-size: 26px;
     font-weight: 400;
     line-height: 22px;
+    margin-top: 5px;
+  }
+
+  .section__nav {
+    margin-top: 15px;
+    display: flex;
+    justify-content: center;
+  }
+
+  .section__content {
+    margin-top: 10px;
   }
 }
